# meok-law-mcp

./: .mcp.json  CHANGELOG.md  LICENSE  README.md  SECURITY.md  acp.json  law_bundle.json  law_core.py  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.well-known/: agent-card.json  agent.json  mcp-server-card.json
tests/: test_server.py
